# appflowy_editor_sync_plugin

./: .gitignore  LICENSE  README.md  analysis_options copy.yaml  build.yaml  flutter_rust_bridge.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
debug/: test-case.txt  test-case2.txt  test-case3.txt  test-case4.txt
debug/before_release/: log1.txt  log2.txt  log3.txt  log4.txt  log5.txt  log6.txt
example/: README.md  build.yaml  pubspec.yaml
example/integration_test/: simple_test.dart
example/lib/: desktop_editor.dart  drag_to_reorder_editor.dart  main.dart  main.g.dart  mobile_editor.dart
example/linux/: CMakeLists.txt
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
ios/: applowy_sync_package.podspec
lib/: appflowy_editor_sync_init.dart  appflowy_editor_sync_plugin.dart  appflowy_editor_sync_utility_functions.dart  document_initializer.dart  document_sync_db.dart  editor_state_sync_wrapper.dart  merge_updates.dart
lib/convertors/: custom_diff.dart  transaction_adapter_helpers.dart
linux/: CMakeLists.txt
macos/: appflowy_editor_sync_plugin.podspec  applowy_sync_package.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/doc/: constants.rs  document.rs  document_service.rs  document_types.rs  error.rs  mod.rs
rust/src/doc/conversions/: conversion.rs  mod.rs
rust/src/doc/operations/: block_ops.rs  delta_ops.rs  mod.rs  update_ops.rs
rust/src/doc/utils/: another_test3.rs  another_tests2.rs  document_impl.rs  logging.rs  mod.rs  sorting.rs  sorting_test.rs  util.rs
windows/: CMakeLists.txt
(+48 files in other folders)
