[package]
name = "appflowy_editor_sync_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
serde = "1.0.217"
serde_json = "1.0.138"
yrs = "0.22.0"
log = "0.4.21"
flutter_logger = "0.6.0"
futures = "0.3.31"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
